--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tree-sitter-r5rs",
-  "version": "0.1.0",
-  "description": "r5rs-tree-sitter grammar",
+  "name": "tree-sitter-scheme",
+  "version": "0.2.0",
+  "description": "r5/7rs-tree-sitter grammar",
   "main": "grammar.js",
   "scripts": {
     "test": "tree-sitter test"
@@ -14,7 +14,7 @@
   "tree-sitter": [
     {
       "scope": "source.scheme",
-      "file-types": ["scm", "ss"]
+      "file-types": ["scm", "ss", "sld"]
     }
   ]
 }
